crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@handle_no_perform.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
assertion_line: 68
expression: trace
input_file: crates/barnum_engine/tests/completion/handle_no_perform.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Handle {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "handler",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Handle(
                            HandleFrame {
                                effect_id: EffectId(
                                    0,
                                ),
                                body: ActionId(
                                    1,
                                ),
                                handler: ActionId(
                                    2,
                                ),
                                state: Some(
                                    String("input"),
                                ),
                                status: Free,
                            },
                        ),
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_parent: {
        TaskId(
            0,
        ): Some(
            Handle {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(1),
                },
                side: Body,
            },
        ),
    },
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 1,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: String("input"),
    },
]

--- Completion: task_id=0, value="b_done" ---
Result: Some(String("b_done"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Handle {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "handler",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_parent: {},
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 1,
}
Pending: []
